# out_reader

./: CMakeLists.txt
res/: power.out  power_2.out  power_2flat.out
src/: main.cpp
src/gui/: gui_main.cpp  main_window.cpp  main_window.ui  out_load_dialog.cpp  out_load_dialog.ui  plot_wnd.cpp  plot_wnd.ui
src/gui/include/: gui_main.h  main_window.h  out_load_dialog.h  plot_wnd.h
src/parser/: dataset_abstract.cpp  dataset_null.cpp  dataset_v5_3.cpp  parser.cpp  parser_engine_v5_3.cpp  reader.cpp  storage.cpp
src/parser/include/: dataset_abstract.h  dataset_null.h  dataset_v5_3.h  defs.h  parser.h  parser_engine_v5_3.h  reader.h  storage.h
